# rikishi-cards

./: .gitignore
book/: .gitignore  2025年初場所-幕内力士一覧.tex  _quarto.yml  index.qmd  index.tex  pyproject.toml  styles.tex  力士のデータブック.tex
book/content/: list.qmd  list.tex
scrayping/: .gitignore  pyproject.toml
scrayping/data/: 2025_hatsubasho_banzuke.json  2025_hatsubasho_rikishi.json
scrayping/src/scrayping/: __init__.py  fetch.py  transform.py
webapp/: Dockerfile  cloudbuild.yaml  next.config.ts  package-lock.json
webapp/app/: page.tsx
webapp/app/components/: RikishiCard.module.css  RikishiCard.tsx
webapp/app/data/: 2025_hatsubasho_rikishi.json
webapp/app/types/: rikishi.d.ts
